--- a/sample_config.env
+++ b/sample_config.env
@@ -1,14 +1,14 @@
 # Fill your config
-API_HASH = ""
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-OWNER = ""
-OWNER_USERNAME = ""
-PASSWORD = ""
-DATABASE_URL = ""
-LOGCHANNEL = ""   # Add channel id as: "-100 + Actual_ID"
+API_HASH = "ec7e698a1112758a07a7e043d4a07be9"
+BOT_TOKEN = "5844184439:AAGX9hMUqawwIrEBsR17OY8bB6OiyXdbkZ0"
+TELEGRAM_API = "26449345"
+OWNER = "5944503897"
+OWNER_USERNAME = "mg_owner"
+PASSWORD = "MGREBORNBOTS"
+DATABASE_URL = "mongodb+srv://nishanttelegram:grga2003@cluster0.csqwkn9.mongodb.net/?retryWrites=true&w=majority"
+LOGCHANNEL = "-1001616464874"   # Add channel id as: "-100 + Actual_ID"
 USER_SESSION_STRING = "" # Premium account session string to upload upto 4GB (requires "LOGCHANNEL")
 
 # tired of redeploying :(
-UPSTREAM_REPO = "https://github.com/yashoswalyo/MERGE-BOT"
+UPSTREAM_REPO = "https://github.com/Nishant030329/MERGE-BOT"
 UPSTREAM_BRANCH = "master"
